objects/services/pod_named.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      name: custom-http
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
