objects/services/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kplabs-service
subsets:
  - addresses:
      - ip: 10.244.0.3
      - ip: 10.244.0.4
    ports:
      - port: 80
