objects/services/service-selector.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-demo
  name: kplabs-service-selector
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-demo
status:
  loadBalancer: {}
